cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(ActivatingBraveNewTab)  # Replace "YourProjectName" with the desired name of your project

set(CMAKE_CXX_STANDARD 11)

add_executable(ActivatingBraveNewTab main.cpp)  # Replace "YourExecutableName" with the desired name for your executable

